[package]
name = "rustacuda"
version = "0.1.0"
authors = ["Brook Heisler <brookheisler@gmail.com>"]
edition = "2018"

description = "CUDA Driver API Wrapper"
repository = "https://github.com/bheisler/RustaCUDA"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["bindings", "cuda", "gpgpu"]
categories = ["api-bindings", "concurrency"]

[badges]
travis-ci = { repository = "bheisler/RustaCUDA" }
maintenance = { status = "actively-developed" }

[features]
typed-arrays = ["ndarray"]

[dependencies]
cuda-sys = { path = "../cuda-sys" }
bitflags = "1.0"
ndarray = { version = "0.12.1", optional = true }
rustacuda_derive = { version = "0.1.0", path = "rustacuda_derive" }
rustacuda_core = { version = "0.1.0", path = "rustacuda_core" }

[[example]]
name = "texture"
required-features = ["typed-arrays"]